Add TrackViewController with flight mapping

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 FlyWhizz.xcodeproj/project.xcworkspace/xcuserdata/benjisa.xcuserdatad/UserInterfaceState.xcuserstate
+
+FlyWhizz.xcodeproj/xcuserdata/benjisa.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
